# Blender-MMD-Physics-Addons

./: .gitattributes  .gitignore  .gitmodules  COPYING  README.md  __init__.py  blender_manifest.toml  config.py  localization.py
native/: CMakeLists.txt  pmx_bullet_api.cpp  pmx_bullet_api.h
native/pmx_bullet/: CMakeLists.txt
operators/: AddonOperators.py  __init__.py
panels/: AddonPanels.py  __init__.py
physics/: __init__.py  bake.py  bullet_native.py  debug_visual.py  hybrid_physics_world.py  physics_sync.py  physics_world.py  pmx_data_reader.py  shadow_physics_world.py  shared_physics_world.py  transforms.py  types.py
